# haskell-sc-scratch

./: Cookbook.sc  DBufRdEx.hs  FRPScratch.hs  Instances.hs  LocalInEx.hs  Missing.hs  ParallelSeq2.hs  ParallelSeq3.hs  ParallelSeq4.hs  README  Reusable.hs  SCQuery.hs  SCSched.hs  SCTree.hs  Scheduling.hs  Scheduling2.hs  Scheduling3.hs  Scratch.hs  SimpleMapping.hs  SimpleNotes.hs  SimpleUGens.hs  TODO  ThreadPlay.hs  WritingSynthDef.hs
Etude/study-for-a-pile-of-oscillators/: study-for-a-pile-of-oscillators.cabal
Etude/study-for-a-pile-of-oscillators/src/run/: main.hs
Etude/study-for-noises-and-filters/: study-for-noises-and-filters.cabal
Scratch/Building/selfdep/: LICENSE  selfdep.cabal
Scratch/Building/selfdep/run/: foo.hs
Scratch/Building/selfdep/tests/: test.hs
Scratch/GLTut/: GLTut.cabal  gltut.hs
Scratch/GLTut/GLTut/: AlphaBlend.hs  Commet.hs  Fountain.hs  Particle.hs  RenderString.hs  RollingCommon.hs  RollingRectangle.hs  RollingRectangle2.hs
Scratch/HaskellWiki/repa-tut/: Main.hs  repa-tut.cabal
Scratch/HaskellWiki/repa-tut/Tut/: Repa.hs
Scratch/Lhs2html/: lhs2html.cabal
Scratch/Parallel/hal6/: hal6.cabal
Scratch/Parallel/hal6/Hal6/: Collatz.hs  ParTest0.hs  ParTest1.hs  ParTest2.hs  ParTest3.hs  ParTest4.hs  ParTest5.hs  ParTest6.hs  ParTest7.hs  Queen.hs
Scratch/Parallel/hal6/run/: partest.hs  partest0.hs  queen.hs
Scratch/RunningTests/: RunningTests.hs  running-tests.cabal
Scratch/RunningTests/selfdep/: selfdep.cabal
Scratch/RunningTests/selfdep/Self/: Dep.hs
Scratch/SynthDB/: synthdb.cabal  synthdb.hs
Scratch/SynthDB/SynthDB/: CLI.hs  Persist.hs  QHereDoc.hs  Web.hs
codesize/: codesize.cabal  henc.hs
codesize/Language/Haskell/: CodeSize.hs
designing-sound/: LICENSE  designing-sound.cabal
designing-sound/src/: DesigningSound.hs  dial.hs
designing-sound/src/DesigningSound/: AdditiveSynthesis.hs  Alarms.hs  Boing.hs  BouncingBall.hs  Bubbles.hs  CreakingDoor.hs  DTMF.hs  Fire.hs  Pedestrians.hs  PhoneTones.hs  Rain.hs  RollingCan.hs  RunningWater.hs  SchroederReverb.hs  Sirens.hs  TelephoneBell.hs  Util.hs
fts/: README  fts.cabal  mkIndex.hs  style.css
fts/Fts/: Control.hs  Model.hs  View.hs
fts/Fts/Command/: Index.hs  Serve.hs
fts/src/: Main.hs  fts.hs
fts/src/Fts/: Control.hs  Model.hs  View.hs
fts/src/Fts/Command/: Index.hs  Serve.hs
fts/templates/: search.tpl  wrap.tpl
hsc3-lepton/: LICENSE  README  hsc3-lepton.cabal  leptseq.hs  run-all.sh  tests.hs
hsc3-lepton-cli/: Main.hs  hsc3-lepton-cli.cabal  notes-snew-syntax.md  notes-synthdef-db.md  scshell.hs  tests.hs
hsc3-lepton-cli/run/: hscshell.hs  hsynthdef.hs  tests.hs
hsc3-lepton-gui/: hsc3-lepton-gui.cabal
hsc3-lepton-gui/Sound/SC3/Lepton/: GUI.hs
hsc3-lepton-midi/: hsc3-lepton-midi.cabal
hsc3-lepton-midi/Sound/SC3/Lepton/: MIDI.hs
hsc3-lepton/Scratch/: Bz.hs  Bz2.hs  ChuckOTF.hs  Client.hs  E.hs  EInstance.hs  EInstance2.hs  Etree.hs  Huh.hs  L.hs  L2.hs  L3.hs  L4.hs  LInstance2.hs  Nd.hs  PC02.hs  Parse4.hs  Parse5.hs  Parse7.hs  Parse8.hs  Parse9.hs  ParseP.hs  Patterns.hs  RespTest.hs  S.hs  SInstance2.hs  SampleData.hs  SampleData2.hs  Server.hs  THHelper.hs  THRun.hs  Term00.hs  Type00.hs
hsc3-lepton/Scratch/Pattern/: Buzz.hs  ChuckOTF2.hs  Deserialize.hs  E.hs  Etree.hs  Huh2.hs  L3.hs  PC02.hs  S.hs  SInstance2.hs  SPE.hs  THHelper.hs  Term00.hs  Type00.hs
hsc3-lepton/Sound/SC3/: Lepton.hs
hsc3-lepton/Sound/SC3/Lepton/: Instance.hs  Looper.hs  PState.hs  Parser.hs  Pattern.hs  Phrase.hs  Query.hs  QuickCheck.hs  Respond.hs  Schedule.hs  Scratch.hs  Server.hs  Tree.hs  UGen.hs  Util.hs
hsc3-lepton/Sound/SC3/Lepton/Tree/: Nd.hs  (+4 more)
hsc3-lepton/src/Scratch/: AcidOWork.lhs  D.hs  Generic.hs  Huh.hs  LInstance.hs  PC01.hs  PState.hs  Parse3.hs  Parse4.hs  Parse6.hs  Parse7.hs  Patterns.hs  RespTest.hs  SInstance.hs  SampleData.hs  SampleData2.hs  Type01.hs  Type02.hs  pspe.data  workspace.hs
hsc3-lepton/src/Scratch/Pattern/: AcidO.hs  Buzz.hs  ChuckOTF2.hs  DroneBass.hs  Huh2.hs  If.hs  SPE.hs
hsc3-lepton/src/Sound/SC3/: Lepton.hs
hsc3-lepton/src/bench/Bench/: CompressPattern.hs  Expr.hs  PSPE.hs  SampleData.hs  SerializePattern.hs  WriteScore.hs  test-deserialize.hs
hsc3-lepton/src/examples/: demand.hs  tree.hs
hsc3-lepton/src/exec/: tests.hs
hsc3-supply/: hsc3-supply.cabal
hsc3-supply/src/: test.hs
hsc3-supply/src/example/: spe.hs
hsc3-th/: hsc3-th.cabal
hsc3-th/src/: test.hs
hsc3-tree/: LICENSE  hsc3-tree.cabal
hsc3-tree/src/bench/: hsc3-tree-bench.hs
hsc3-tree/src/example/: tree.hs
hsc3-tree/src/test/: test.hs
hsc3-wing/: hsc3-wing.cabal
hsc3-wing/Sound/SC3/: Wing.hs
hsc3-wing/Sound/SC3/Wing/: ControlArg.hs  Instance.hs  Missing.hs  Phrase.hs  Query.hs  Schedule.hs  Tree.hs  UGen.hs  Util.hs
netpbm-parser/: netpbm-parser.cabal
netpbm-parser/src/Codec/PBM/: Parser.hs  Types.hs
pssd/: LICENSE  pssd.cabal
pssd/src/Pssd/: Util.hs
pssd/src/Pssd/Earth/: Bubbles.hs  Fire.hs  Rain.hs  StormyDay.hs  Stream.hs  Tea.hs  Thunder.hs
pssd/src/Pssd/Engineering/: Clock.hs  Motors.hs  Switches.hs
pssd/src/Pssd/Future/: Acid.hs  Droids.hs  LaserBeam.hs
pssd/src/Pssd/Mayhem/: AK47.hs
pssd/src/Pssd/Monster/: Applause.hs  Birds.hs  FootSteps.hs  Roar.hs
pssd/src/Pssd/TelephoneBells/: Eighties.hs  OldStyle.hs  YetMoreBloody.hs
pssd/src/run/: dial.hs  oldstyle.hs  pssdgui.hs
repa-fftw/: repa-fftw.cabal
repa-fftw/Data/Array/Repa/: FFTW.hs
repa-fftw/examples/: bench.hs  dochead.hs
repa-sndfile/: gensine.hs  repa-sndfile.cabal  rw.hs
repa-sndfile/Test/: GenSine.hs  ReadWrite.hs
repa-sndfile/example/: gensine.hs  rw.hs
repa-sndfile/run/: gensine.hs  rw.hs
tdss/: README  tdss.cabal  tdss.hs
tdss/Tdss/: Control.hs  Model.hs  View.hs
tdss/Tdss/Command/: Index.hs  Serve.hs
tdss/templates/: search.tpl  wrap.tpl
tokyodystopia-haskell/: LICENSE  Test.hs  tokyodystopia-haskell.cabal
tokyodystopia-haskell/Database/: TokyoDystopia.hs
tokyodystopia-haskell/Database/TokyoDystopia/: Class.hs  FFI.hs  IDB.hs  Internal.hs  JDB.hs  QDB.hs  TCI.hs  Types.hs  Utils.hs  WDB.hs  WDB_out.hs
(+595 files in other folders)
