name:                fts
version:             0.2
synopsis:            Example web app for full text search with tokyo dystopia
license:             BSD4
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
stability:           Experimental
category:            Web
build-type:          Simple
cabal-version:       >=1.2

executable fts
  hs-source-dirs: src
  main-is: Main.hs
  ghc-options:
    -O2
    -Wall
    -threaded
    -funbox-strict-fields
    -fno-warn-unused-do-bind
  build-depends:
    base >= 4,
    haskell98,
    cmdargs >= 0.6.4,
    monads-fd >= 0.1 && <0.2,
    bytestring >= 0.9.1 && <0.10,
    containers -any,
    directory -any,
    directory-tree >= 0.9.1,
    snap-core >= 0.3.0,
    snap-server >= 0.3.0,
    heist >= 0.4.0,
    filepath >= 1.1 && <1.2,
    tagsoup >= 0.11.1,
    hexpat -any,
    network -any,
    tokyodystopia-haskell >= 0.0.2,
    tokyocabinet-haskell -any
