name:		hsc3-lepton-cli
version:	0.0.4
synopsis:       Command line utilities for scsynth using hsc3-lepton
author:         8c6794b6
maintainer:     8c6794b6@gmail.com
cabal-version:  >= 1.6
build-type:     Simple
license:        BSD3
category:       GUI
stability:      experimental
description:
  Command line utilities for scsynth using hsc3-lepton

flag hpc
  description:
    Enable compiling with hpc flag turned on
  default:
    False

test-suite main-tests
  ghc-options:
    -O2 -Wall -fhpc -fno-warn-unused-do-bind -fno-warn-orphans
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    ./ ./run
  main-is:
    tests.hs

executable hscshell
  ghc-options:
    -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  hs-source-dirs:
    ./ ./run
  main-is:
     hscshell.hs

executable hsynthdef
  ghc-options:
    -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  hs-source-dirs:
    ./ ./run
  main-is:
     hsynthdef.hs

library
  ghc-options:
    -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  if flag(hpc)
     ghc-options: -fhpc

  exposed-modules:
    Sound.SC3.Lepton.CLI.HscShell.Parser
    Sound.SC3.Lepton.CLI.HscShell.Repl
    Sound.SC3.Lepton.CLI.HscShell.Cmd
    Sound.SC3.Lepton.CLI.HscShell.SynthdefPeeker
    Sound.SC3.Lepton.CLI.Hsynthdef
  build-depends:
    base == 4.*,
    binary,
    bytestring,
    cmdargs,
    containers >= 0.3.0.0,
    directory,
    filepath,
    mtl >= 2.0.0,
    parsec >= 3.0.0,
    pretty,
    syb,
    uniplate >= 1.6,
    haskell-src >= 1.0.1.4,
    hint >= 0.3.3.2,
    hosc,
    hsc3,
    hsc3-lepton >= 0.0.4,
    QuickCheck,
    haskeline