Name:		hsc3-lepton-midi
Version:	0.0.1
Synopsis:       Extension to hsc3, MIDI things
Description:    Extension to hsc3 haskell supercollider3 client language.
                Still in extremely early stage of development. Terribly scratch.
Author:         8c6794b6
Maintainer:     8c6794b6@gmail.com
Cabal-Version:  >= 1.6
build-type:     Simple
license:        BSD3
category:       Sound
stability:      experimental

library
  Exposed-Modules:
    Sound.SC3.Lepton.MIDI
  Build-depends:
    base == 4.*,
    alsa,
    hosc >= 0.8,
    hsc3 >= 0.8
