name:                hsc3-tree
version:             0.14.0.0
synopsis:            Manages synth and group in scsynth server node tree.
description:
  This package contains utilities to manages synthes and groups in scsynth
  server-side node tree.  It contains functions to map synth and groups in
  declarative style. 'Synth' and 'Group' nodes could be expressed as haskell
  data type, for sending to and receiving from scsynth server.
  .
  See "Sound.SC3.Tree" for example.

license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
category:            Sound
build-type:          Simple
extra-source-files:  src/example/tree.hs

cabal-version:       >=1.10

flag dev
  description:       Enable developer options
  default:           False

library
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -Wall
  exposed-modules:   Sound.SC3.Tree
                     Sound.SC3.Tree.Connection
                     Sound.SC3.Tree.Diff
                     Sound.SC3.Tree.Nd
                     Sound.SC3.Tree.Type
                     Sound.SC3.Tree.Zipper
  other-modules:     Sound.SC3.Parser.Datum
  build-depends:     base >=4.6 && <4.7
                   , bytestring
                   , containers
                   , gdiff
                   , hosc >= 0.14
                   , hsc3 >= 0.14
                   , parsec >= 3.0
                   , pretty
                   , mtl
                   , random
                   , transformers
                   , uniplate

executable hsc3-tree-example
  if flag(dev)
    buildable:       True
  else
    buildable:       False
  hs-source-dirs:    src/example
  default-language:  Haskell2010
  main-is:           tree.hs
  build-depends:     base >=4.6 && <4.7
                   , hsc3
                   , hsc3-tree
                   , uniplate

test-suite tests
  hs-source-dirs:    src/test
  main-is:           test.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -rtsopts -auto-all -threaded -rtsopts
  other-modules:     Test.Sound.SC3.Tree.Diff
                     Test.Sound.SC3.Tree.Nd
                     Test.Sound.SC3.Tree.Type
                     Test.Sound.SC3.Tree.Zipper
                     Test.Sound.SC3.Tree.QuickCheck
  build-depends:     base >= 4.6 && <4.7
                   , bytestring
                   , containers
                   , hsc3
                   , hosc
                   , hsc3-tree -any
                   , tasty
                   , tasty-quickcheck
                   , tasty-th
                   , uniplate
                   , QuickCheck