name:                hsc3-tree
version:             0.14.0.2
synopsis:            Manages synth and group in scsynth server node tree.
description:
  This package contains utilities to manages synthes and groups in scsynth
  server-side node tree.  It contains functions to map synth and groups in
  declarative style. 'Synth' and 'Group' nodes could be expressed as haskell
  data type, for sending to and receiving from scsynth server.
  .
  See "Sound.SC3.Tree" for examples.

license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
category:            Sound
build-type:          Simple
extra-source-files:  src/example/tree.hs

cabal-version:       >=1.10

flag dev
  description:       Enable developer options
  default:           False

library
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -Wall
  exposed-modules:   Sound.SC3.Tree
                     Sound.SC3.Tree.Connection
                     Sound.SC3.Tree.Diff
                     Sound.SC3.Tree.Nd
                     Sound.SC3.Tree.Type
                     Sound.SC3.Tree.Query
                     Sound.SC3.Tree.Zipper
  other-modules:     Sound.SC3.Parser.Datum
  build-depends:     base >=4.6
                   , bytestring
                   , containers
                   , deepseq
                   , gdiff
                   , hosc >= 0.14
                   , hsc3 >= 0.14
                   , parsec >= 3.0
                   , pretty
                   , mtl
                   , random
                   , syb
                   , transformers

executable hsc3-tree-example
  if flag(dev)
    buildable:       True
  else
    buildable:       False
  hs-source-dirs:    src/example
  default-language:  Haskell2010
  main-is:           tree.hs
  build-depends:     base >=4.6
                   , hsc3
                   , hsc3-tree
                   , syb

test-suite tests
  hs-source-dirs:    src/test
  main-is:           test.hs
  default-language:  Haskell2010
  type:              exitcode-stdio-1.0
  ghc-options:       -rtsopts -auto-all -threaded -rtsopts
  other-modules:     Test.Sound.SC3.Tree.Diff
                     Test.Sound.SC3.Tree.Nd
                     Test.Sound.SC3.Tree.Type
                     Test.Sound.SC3.Tree.Query
                     Test.Sound.SC3.Tree.QuickCheck
                     Test.Sound.SC3.Tree.Zipper
  build-depends:     base >= 4.6
                   , bytestring
                   , containers
                   , hsc3
                   , hosc
                   , hsc3-tree -any
                   , syb
                   , tasty
                   , tasty-hunit
                   , tasty-quickcheck
                   , tasty-th
                   , HUnit
                   , QuickCheck

benchmark bench
  hs-source-dirs:   src/bench
  main-is:          hsc3-tree-bench.hs
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  build-depends:    base >= 4.6
                  , criterion
                  , hosc
                  , hsc3-tree
  ghc-options:      -O -Wall
