Name:		hsc3-wing
Version:	0.0.1
Synopsis:       Extension to hsc3
Description:    Extension to hsc3 haskell supercollider3 client language.
                Still in extremely early stage of development. Terribly scratch.
Author:         8c6794b6
Maintainer:     8c6794b6@gmail.com
Cabal-Version:  >= 1.6
build-type:     Simple
license:        BSD3
category:       Sound
stability:      experimental

library
  GHC-Options: -O2
  Exposed-Modules:
    Sound.SC3.Wing
    Sound.SC3.Wing.Instance
    Sound.SC3.Wing.Phrase
    Sound.SC3.Wing.Query
    Sound.SC3.Wing.Schedule
    Sound.SC3.Wing.Tree
    Sound.SC3.Wing.UGen
    Sound.SC3.Wing.UGen.ControlArg
    Sound.SC3.Wing.UGen.Factory
    Sound.SC3.Wing.UGen.Missing
    Sound.SC3.Wing.Util
  Build-depends:
    base == 4.*,
    bytestring,
    containers,
    filepath,
    random,
    syb,
    mtl,
    hosc >= 0.8,
    hsc3 >= 0.8,
    reactive >= 0.11.4
