Name:                repa-sndfile
Version:             0.0.1
Synopsis:            Read and write sound files to repa via libsndfile

-- Description:

License:             BSD3
License-file:        LICENSE
Author:              8c6794b6
Maintainer:          8c6794b6@gmail.com
-- Copyright:
Category:            Data Structures
Build-type:          Simple
-- Extra-source-files:

Cabal-version:       >=1.2

flag dev
  description:
    Add developer options
  default:
    False

executable rw
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -auto-all -caf-all
  main-is: rw.hs

executable gensine
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -auto-all -caf-all
  main-is: gensine.hs

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-orphans

  Exposed-modules:
    Data.Array.Repa.IO.Sndfile

  Build-depends:
    base >= 4.0 && < 5.0,
    hsndfile >= 0.5,
    hsndfile-vector >= 0.4.0,
    vector >= 0.7 && < 0.9,
    repa == 2.1.1.5

  if flag(dev)
    Other-modules:
      Test.ReadWrite
      Test.GenSine
