Name:                repa-sndfile
Version:             0.0.1
Synopsis:            Read and write sound files to repa via libsndfile

-- Description:

License:             BSD3
License-file:        LICENSE
Author:              8c6794b6
Maintainer:          8c6794b6@gmail.com
-- Copyright:
Category:            Data Structures
Build-type:          Simple

Cabal-version:       >=1.2

Extra-source-files:
  run/gensine.hs
  run/rw.hs

flag dev
  description:
    Add developer options
  default:
    False

executable rw
  main-is: run/rw.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -- -auto-all -caf-all

executable gensine
  main-is: run/gensine.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -- -auto-all -caf-all

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-orphans

  Exposed-modules:
    Data.Array.Repa.IO.Sndfile

  Build-depends:
    base >= 4.0 && < 5.0,
    hsndfile >= 0.5.1,
    repa == 2.1.1.5

  if flag(dev)
    build-depends:
      hsndfile-vector >= 0.4.0,
      vector >= 0.7 && < 0.9
    Other-modules:
      Test.ReadWrite
