Name:           repa-sndfile
Version:        0.0.1
Synopsis:       Read and write sound files to repa via libsndfile
License:        BSD3
License-file:   LICENSE
Author:         8c6794b6
Maintainer:     8c6794b6@gmail.com
Copyright:      8c6794b6, 2011
Category:       Data Structures
Build-type:     Simple
Cabal-version:  >=1.2

Description:
  Support repa array for reading and writing in various sound file.
  The code is using libsndfile and hsndfile package as its haskell
  binding hsndfile.

Extra-source-files:
  example/gensine.hs
  example/rw.hs

flag dev
  description:
    Add developer options
  default:
    False

executable rw

  main-is: example/rw.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -auto-all -caf-all

executable gensine

  main-is: example/gensine.hs
  if flag(dev)
    buildable: True
  else
    buildable: False
  ghc-options:
    -Wall -rtsopts -threaded
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -auto-all -caf-all

Library

  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -fno-warn-orphans
    -O2

  Exposed-modules:
    Data.Array.Repa.IO.Sndfile

  Build-depends:
    base >= 4.0 && < 5.0,
    hsndfile >= 0.5.1,
    repa == 2.1.1.5

  if flag(dev)
    build-depends:
      hsndfile-vector >= 0.4.0,
      vector >= 0.7 && < 0.9
    Other-modules:
      Test.ReadWrite
