name:          tdss
version:       0.3.1
synopsis:      Tokyo dystopia snap search
license:       BSD4
author:        8c6794b6
maintainer:    8c6794b6@gmail.com
stability:     Experimental
category:      Web
build-type:    Simple
cabal-version: >=1.2
description:
  Simple web app for full text searching with using tokyo dystopia and snap web
  framework, including command line interface for indexing and serving the site.

executable tdss
  main-is: tdss.hs
  ghc-options:
    -O2 -Wall -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  build-depends:
    base >= 4,
    blaze-builder >= 0.3.0,
    bytestring >= 0.9.1 && <0.10,
    cmdargs >= 0.6.4,
    mtl,
    containers -any,
    directory -any,
    directory-tree >= 0.9.1,
    snap-core >= 0.5.1,
    snap-server >= 0.5.1,
    heist >= 0.5.2,
    filepath,
    tagsoup >= 0.11.1,
    hexpat >= 0.19.5,
    network >= 2.3,
    text >= 0.11.0,
    tokyodystopia-haskell >= 0.0.2,
    tokyocabinet-haskell >= 0.0.5,
    xmlhtml >= 0.1.5
